# kafka-toy

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: test.yml
ops/kafka/: config.py  docker-compose.yml  provision.py
src/: config.py  factory.py  main.py
src/common/: utils.py
src/common/domain/: transaction.py
src/common/services/: transactions_factory.py
src/consumer/infra/: KafkaRepository.py  consumer_repository.py  fake_consumer_repository.py  filesystem_repo.py  kafka_consumer_repository.py
src/consumer/services/: consumer_service.py
src/consumer/services/processors/: customer_balance_processor.py  fake_processor.py  high_value_seeker_processor.py  processor.py
src/infra/: KafkaRepository.py
src/producer/domain/: transaction.py
src/producer/infra/: kafka_producer_repository.py  producer_repository.py
src/producer/services/: producer_service.py  transactions_factory.py
tests/: builders.py  conftest.py
tests/__fixtures__/: transactions.json
tests/acceptance/: test_provision.py
tests/integration/consumer/services/: test_consumer_service.py
tests/unit/producer/domain/: test_transaction.py
tests/unit/producer/services/: test_file_system_repo.py  test_transactions_factory.py
